force-app/main/default/objects/Institute__c/Institute__c.object-meta.xml
<CustomObject>
    <label>Institute</label>
    <nameField>
        <displayFormat>INT-{000}</displayFormat>
        <label>Institute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Institutes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>