force-app/main/default/objects/Institute__c/fields/Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>Institute_Name__c</fullName>
    <label>Institute Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>