force-app/main/default/objects/Institute__c/fields/Loaction__c.field-meta.xml
<CustomField>
    <fullName>Loaction__c</fullName>
    <label>Loaction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>