force-app/main/default/objects/Institute__c/fields/No_of_Faculties__c.field-meta.xml
<CustomField>
    <fullName>No_of_Faculties__c</fullName>
    <label>No of Faculties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>